# cppl-homework-04.01

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cppl-homework-04.01  list.cpp  test-main.cpp
Catch2-build/: Makefile  cmake_install.cmake
Catch2-build/src/: Makefile  cmake_install.cmake
